# Practise

./: README.md
c++/BezierSpline/: main.cpp  pointcreater.m  pointreader.m  smooth.cpp  smooth.h  smooth.sln  smooth.vcxproj  smooth.vcxproj.filters
c++/algorithm/list/: lianbiao.cpp
c++/algorithm/search/: deepfirst.cpp
c++/algorithm/sort/: sort.cpp
c++/hugh/: CMakeLists.txt
c++/hugh/app/: leetcode_test.cpp  main.cpp
c++/hugh/include/: leetCode.h  myStack.h  myString.h  test.h  tree.h
c++/hugh/src/: leetCode.cpp  myString.cpp  tree.cpp
matlab/music/: music.m
python/Algorithm/CoinChange_framework/: CoinChange.py  CoinChangeTest.py
python/Algorithm/DijkstraFramework/: Dijkstra.py
python/Algorithm/Sorting_framework/: Sorting.py  SortingTest.py
python/learn/: first.py  func.py  second.py  test.py
